# open-yasa

./: Cargo.toml  README.md
.github/workflows/: draft.yml
scripts/: build.sh
scripts/validate-form/: package.json
snap/: snapcraft.yaml
yazi-actor/src/app/: bootstrap.rs
yazi-actor/src/mgr/: bulk_create.rs  cd.rs  copy.rs  create.rs  enter.rs  hardlink.rs  leave.rs  link.rs  open.rs  paste.rs  peek.rs  refresh.rs  remove.rs  rename.rs  watch.rs  yank.rs
yazi-config/preset/: yazi-default.toml
yazi-config/src/: lib.rs  open_yasa.rs  yazi.rs
yazi-fm/: Cargo.toml
yazi-packing/: Cargo.toml
yazi-vfs/src/: lib.rs  machines.rs
yazi-vfs/src/config/: sftp.rs  vfs.rs
yazi-vfs/src/provider/sftp/: conn.rs
