[package]
name                   = "yazi-packing"
description            = "Yazi packing"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.deb]
name                      = "open-yasa"
license-file              = [ "../LICENSE", "0" ]
depends                   = "file, ffmpeg, 7zip, jq, poppler-utils, fd-find|fd, ripgrep, fzf, zoxide, imagemagick, xsel|xclip|wl-clipboard"
recommends                = "bash-completion"
extended-description-file = "README.md"
section                   = "utility"
priority                  = "optional"
assets                    = [
	[ "target/release/open-yasa-ya", "usr/bin/", "755" ],
	[ "target/release/open-yasa", "usr/bin/", "755" ],
	[ "target/release/yasa-ya", "usr/bin/", "755" ],
	[ "target/release/yasa", "usr/bin/", "755" ],
	[ "../README.md",  "usr/share/doc/open-yasa/README", "644" ],
	[ "../yazi-cli/completions/ya.bash", "usr/share/bash-completion/completions/open-yasa-ya", "644" ],
	[ "../yazi-boot/completions/yazi.bash", "usr/share/bash-completion/completions/open-yasa", "644" ],
	[ "../yazi-cli/completions/ya.bash", "usr/share/bash-completion/completions/yasa-ya", "644" ],
	[ "../yazi-boot/completions/yazi.bash", "usr/share/bash-completion/completions/yasa", "644" ],
]
